# ai-worker

./: .dockerignore  .gitignore  AGENTS.md  README.md  openapi.yaml
.github/workflows/: ai-runner-docker-batch-base.yaml  ai-runner-docker-batch-pipelines.yaml  ai-runner-docker-live-comfyui.yaml  ai-runner-docker-live-noop.yaml  ai-runner-docker-live-scope.yaml  ai-runner-docker-live-streamdiffusion.yaml  ai-runner-docker-scope.yaml  ai-runner-models.yaml  ai-runner-pipelines-docker.yaml  ai-runner-test.yaml  streamdiffusion-docker.yaml  validate-openapi-on-pr.yaml
docs/: custom-pipeline.md  development-guide.md  live-ai-local-dev.md  runner-docker.md  streamdiffusion-cached-attention-update-2025-12-03.md  streamdiffusion-schema-update-2025-11-25.md  streamdiffusion-schema-update.md
live/comfyui/: Dockerfile  main.py  pyproject.toml
live/comfyui/pipeline/: params.py  pipeline.py
live/scope/: Dockerfile  main.py  pyproject.toml
live/scope/pipeline/: params.py  pipeline.py
live/streamdiffusion/: Dockerfile  main.py  pyproject.toml
live/streamdiffusion/default_params/: sd15.json  sd15_v2v.json  sdxl.json
live/streamdiffusion/pipeline/: params.py  pipeline.py  prepare.py
runner/: bench.py  dl_checkpoints.sh  gateway.openapi.yaml  gen_openapi.py  modal_app.py  openapi.yaml  pyproject.toml  requirements.live-ai.txt  requirements.txt
runner/app/: app.py  main.py
runner/app/live/api/: api.py
runner/app/live/pipelines/: comfyui.py  comfyui_params.py  interface.py  loader.py  noop.py  spec.py  streamdiffusion.py  streamdiffusion_params.py
runner/app/live/pipelines/comfyui/: __init__.py  params.py  pipeline.py
runner/app/live/pipelines/scope/: __init__.py  params.py  pipeline.py
runner/app/live/pipelines/streamdiffusion/: params.py  pipeline.py  prepare.py  sdturbo_default_params.json  sdxl_default_params.json  sdxl_faceid_default_params.json
runner/app/live/process/: process.py  process_guardian.py
runner/app/live/streamer/: streamer.py
runner/app/live/trickle/: decoder.py
runner/app/pipelines/: audio_to_text.py  image_to_image.py  image_to_text.py  image_to_video.py  live_video_to_video.py  llm.py  segment_anything_2.py  text_to_image.py  text_to_speech.py  upscale.py
runner/app/tools/: prepare_models.py
runner/app/tools/scope/: __init__.py  prepare_models.py
runner/app/tools/streamdiffusion/: build_tensorrt.py  build_tensorrt_internal.sh
runner/dev/: Dockerfile.debug
runner/dev/patches/: mock.patch
runner/docker/: Dockerfile  Dockerfile.audio_to_text  Dockerfile.live-app-comfyui  Dockerfile.live-app-noop  Dockerfile.live-app__PIPELINE__  Dockerfile.live-base  Dockerfile.live-base-comfyui  Dockerfile.live-base-scope  Dockerfile.live-base-streamdiffusion  Dockerfile.llm  Dockerfile.segment_anything_2  Dockerfile.text_to_speech
runner/src/runner/: app.py  dependencies.py  main.py
runner/src/runner/live/: infer.py
runner/src/runner/live/api/: api.py
runner/src/runner/live/pipelines/: __init__.py  interface.py  spec.py
runner/src/runner/live/process/: process.py  process_guardian.py
runner/src/runner/live/streamer/protocol/: trickle.py
runner/src/runner/live/trickle/: encoder.py  media.py
runner/src/runner/pipelines/: audio_to_text.py  base.py  frame_interpolation.py  image_to_image.py  image_to_text.py  image_to_video.py  live_video_to_video.py  llm.py  segment_anything_2.py  text_to_image.py  text_to_speech.py  upscale.py
runner/src/runner/pipelines/utils/: __init__.py  utils.py
runner/src/runner/routes/: audio_to_text.py  hardware.py  health.py  image_to_image.py  image_to_text.py  image_to_video.py  live_video_to_video.py  llm.py  segment_anything_2.py  text_to_image.py  text_to_speech.py  upscale.py  version.py
runner/src/runner/runit/infer/: run
runner/src/runner/runit/uvicorn/: run
runner/src/runner/tools/: prepare_models.py
runner/tests/routes/: test_utils.py
runner/tests/utils/: test_hardware.py
worker/: docker.go
