[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-runner"
version = "0.1.0"
description = "AI Runner - containerized inference runtime for the Livepeer AI network"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.38.0",
    "prometheus_client==0.23.1",
    "Pillow==10.3.0",
    "numpy==1.26.4",
    "psutil==6.0.0",
    "nvidia-ml-py==12.560.30",
    "pynvml==12.0.0",
    "python-multipart==0.0.9",
    "aiohttp==3.10.9",
]

[project.optional-dependencies]
batch = [
    "setuptools==69.5.1",
    "pydantic==2.7.2",
    "diffusers==0.31.0",
    "accelerate==0.30.1",
    "transformers==4.43.3",
    "huggingface_hub==0.23.2",
    "xformers==0.0.23",
    "triton>=2.1.0",
    "peft==0.11.1",
    "deepcache==0.1.1",
    "safetensors==0.4.3",
    "scipy==1.13.0",
    "av==12.1.0",
    "sentencepiece==0.2.0",
    "protobuf==5.27.2",
    "bitsandbytes==0.43.3",
    "types-psutil==6.0.0.20241011",
    "PyYAML==6.0.2",
]
realtime-base = [
    "pydantic==2.11.7",
    "pyzmq==26.2.0",
    "watchdog==5.0.2",
    "opencv-python==4.10.0.84",
    "av==14.4.0",
]
realtime = [
    "ai-runner[realtime-base]",
    "pytorch-triton==3.3.0",
]
llm = [
    "setuptools==69.5.1",
    "pydantic>=2.7.2",
    "vllm==0.6.5",
    "diffusers",
    "accelerate",
    "transformers",
    "huggingface_hub",
    "xformers",
    "triton",
    "peft",
    "deepcache",
    "safetensors",
    "scipy",
    "av",
    "sentencepiece",
    "protobuf",
    "bitsandbytes",
]
dev = [
    "pytest",
    "pytest-mock",
]
# Local development for realtime pipelines with CPU-only torch.
# Also used by the noop pipeline Docker image.
realtime-dev = [
    "ai-runner[realtime-base]",
    "torch",
    "diffusers",
    "transformers",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
conflicts = [
    [
        { extra = "batch" },
        { extra = "llm" },
        { extra = "realtime" },
        { extra = "realtime-base" },
        { extra = "realtime-dev" },
    ],
]

[tool.uv.sources]
torch = { index = "pytorch-cpu", extra = "realtime-dev" }
pytorch-triton = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
