[project]
name = "streamdiffusion-pipeline"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "ai-runner[realtime]",
    "torch==2.7.1+cu128",
    "torchvision==0.22.1+cu128",
    "torchaudio==2.7.1+cu128",
    "streamdiffusion[tensorrt,controlnet,ipadapter]",
    "hf_transfer==0.1.4",
]

[tool.uv.sources]
ai-runner = { path = "../../runner", editable = true }
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
streamdiffusion = { git = "https://github.com/daydreamlive/StreamDiffusion.git", rev = "d17263c2e0c550dfd605d188777c832394efe2e7" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
package = true
override-dependencies = ["pillow==10.3.0"]

[tool.setuptools]
packages = ["pipeline"]
